erDiagram
    USERS {
        INT user_id PK
        VARCHAR username
        VARCHAR email
        VARCHAR password_hash
        DATETIME registration_date
        VARCHAR last_visit_ip
        VARCHAR role "NULL | USERS | CSR | ADMIN | DEVELOPER"
        VARCHAR status "ONLINE | OFFLINE"
        VARCHAR permission "ACTIVE | DEACTIVE | DELETED"
    }
    GAMES {
        INT game_id PK
        INT developer_id FK
        VARCHAR title
        TEXT description
        DECIMAL price
        DECIMAL overall_rating
        VARCHAR status "DRAFT | ACTIVE | TAKEN_DOWN"
    }
    TRANSACTIONS {
        INT transaction_id PK
        INT user_id FK
        DECIMAL total_amount
        DATETIME transaction_date
        VARCHAR receipt_number
    }
    TRANSACTION_ITEMS {
        INT item_id PK
        INT transaction_id FK
        INT game_id FK
        DECIMAL purchase_price
    }

    USERS ||--o{ TRANSACTIONS : makes
    TRANSACTIONS ||--|{ TRANSACTION_ITEMS : contains
    GAMES ||--o{ TRANSACTION_ITEMS : purchased_as
